<resources>
    <string name="app_name">Blueline</string>

    <string name="asset_statements" translatable="false">
    [{
      \"include\": \"https://rsw.me.uk[:]/.well-known/assetlinks.json\"
    }]
    </string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Search methods…</string>
    <string name="search_menu_open">Open menu</string>
    <string name="search_menu_close_search">Close search</string>
    <string name="speak_now">Speak now</string>
    <string name="enter_custom_title">Enter title for custom method</string>

    <string name="action_star">Star</string>
    <string name="action_unstar">Unstar</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About &amp; Help</string>

    <string name="snackbar_star_text">Method has been starred.</string>
    <string name="snackbar_star_action">Unstar</string>
    <string name="snackbar_unstar_text">Method has been unstarred.</string>
    <string name="snackbar_unstar_action">Restar</string>

    <string name="title_activity_main">Search Methods</string>
    <string name="title_activity_main_short">Search</string>
    <string name="title_activity_about">About &amp; Help</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="title_activity_method">Method</string>
    <string name="title_activity_custom">Custom Method</string>
    <string name="title_activity_custom_short">Custom Method</string>
    <string name="title_activity_prove">Composition Prover</string>
    <string name="title_activity_prove_short">Prover</string>
    <string name="title_activity_discover">Discover Methods</string>
    <string name="title_activity_discover_short">Discover</string>
    <string name="title_starred">Starred Methods</string>

    <string name="dialog_confirm_unstar">Unstar method?</string>

</resources>
